src/gen-java/com/cloudera/flume/conf/FlumeDeployParser.java
// $ANTLR 3.1.3 Mar 18, 2009 10:09:25 /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g 2011-01-01 12:44:10

/**
 * Licensed to Cloudera, Inc. under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  Cloudera, Inc. licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package com.cloudera.flume.conf; 


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

/**
 * Licensed to Cloudera, Inc. under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  Cloudera, Inc. licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
public class FlumeDeployParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NODE", "BLANK", "SINK", "BACKUP", "ROLL", "DECO", "SOURCE", "MULTI", "HEX", "OCT", "DEC", "STRING", "BOOL", "FLOAT", "KWARG", "Identifier", "IPLiteral", "StringLiteral", "FloatingPointLiteral", "HexLiteral", "OctalLiteral", "DecimalLiteral", "HexDigit", "IntegerTypeSuffix", "EscapeSequence", "UnicodeEscape", "OctalEscape", "Letter", "JavaIDDigit", "Exponent", "FloatTypeSuffix", "WS", "COMMENT", "LINE_COMMENT", "':'", "'|'", "';'", "','", "'['", "']'", "'{'", "'}'", "'<'", "'>'", "'=>'", "'?'", "'roll'", "'('", "')'", "'='", "'true'", "'false'"
    };
    public static final int DEC=14;
    public static final int FloatTypeSuffix=34;
    public static final int OctalLiteral=24;
    public static final int Exponent=33;
    public static final int SOURCE=10;
    public static final int FLOAT=17;
    public static final int MULTI=11;
    public static final int EOF=-1;
    public static final int HexDigit=26;
    public static final int SINK=6;
    public static final int Identifier=19;
    public static final int T__55=55;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int HEX=12;
    public static final int IPLiteral=20;
    public static final int COMMENT=36;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int HexLiteral=23;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int NODE=4;
    public static final int T__45=45;
    public static final int LINE_COMMENT=37;
    public static final int IntegerTypeSuffix=27;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int ROLL=8;
    public static final int BLANK=5;
    public static final int BOOL=16;
    public static final int KWARG=18;
    public static final int DecimalLiteral=25;
    public static final int BACKUP=7;
    public static final int OCT=13;
    public static final int StringLiteral=21;
    public static final int WS=35;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int UnicodeEscape=29;
    public static final int DECO=9;
    public static final int FloatingPointLiteral=22;
    public static final int JavaIDDigit=32;
    public static final int Letter=31;
    public static final int OctalEscape=30;
    public static final int EscapeSequence=28;
    public static final int STRING=15;

    // delegates
    // delegators


        public FlumeDeployParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public FlumeDeployParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return FlumeDeployParser.tokenNames; }
    public String getGrammarFileName() { return "/home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g"; }

     
    	public void reportError(RecognitionException re) {
    		throw new RuntimeRecognitionException (re);
    	}


    public static class deflist_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "deflist"
    // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:95:1: deflist : ( def )* EOF ;
    public final FlumeDeployParser.deflist_return deflist() throws RecognitionException {
        FlumeDeployParser.deflist_return retval = new FlumeDeployParser.deflist_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF2=null;
        FlumeDeployParser.def_return def1 = null;


        Object EOF2_tree=null;

        try {
            // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:95:9: ( ( def )* EOF )
            // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:95:11: ( def )* EOF
            {
            root_0 = (Object)adaptor.nil();

            // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:95:11: ( def )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=Identifier && LA1_0<=IPLiteral)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:95:11: def
            	    {
            	    pushFollow(FOLLOW_def_in_deflist135);
            	    def1=def();

            	    state._fsp--;

            	    adaptor.addChild(root_0, def1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_deflist138); 
            EOF2_tree = (Object)adaptor.create(EOF2);
            adaptor.addChild(root_0, EOF2_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "deflist"

    public static class def_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "def"
    // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:97:1: def : host ':' source '|' sink ';' -> ^( NODE host source sink ) ;
    public final FlumeDeployParser.def_return def() throws RecognitionException {
        FlumeDeployParser.def_return retval = new FlumeDeployParser.def_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal4=null;
        Token char_literal6=null;
        Token char_literal8=null;
        FlumeDeployParser.host_return host3 = null;

        FlumeDeployParser.source_return source5 = null;

        FlumeDeployParser.sink_return sink7 = null;


        Object char_literal4_tree=null;
        Object char_literal6_tree=null;
        Object char_literal8_tree=null;
        RewriteRuleTokenStream stream_40=new RewriteRuleTokenStream(adaptor,"token 40");
        RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
        RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
        RewriteRuleSubtreeStream stream_host=new RewriteRuleSubtreeStream(adaptor,"rule host");
        RewriteRuleSubtreeStream stream_source=new RewriteRuleSubtreeStream(adaptor,"rule source");
        RewriteRuleSubtreeStream stream_sink=new RewriteRuleSubtreeStream(adaptor,"rule sink");
        try {
            // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:97:5: ( host ':' source '|' sink ';' -> ^( NODE host source sink ) )
            // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:97:7: host ':' source '|' sink ';'
            {
            pushFollow(FOLLOW_host_in_def148);
            host3=host();

            state._fsp--;

            stream_host.add(host3.getTree());
            char_literal4=(Token)match(input,38,FOLLOW_38_in_def150);  
            stream_38.add(char_literal4);

            pushFollow(FOLLOW_source_in_def152);
            source5=source();

            state._fsp--;

            stream_source.add(source5.getTree());
            char_literal6=(Token)match(input,39,FOLLOW_39_in_def154);  
            stream_39.add(char_literal6);

            pushFollow(FOLLOW_sink_in_def156);
            sink7=sink();

            state._fsp--;

            stream_sink.add(sink7.getTree());
            char_literal8=(Token)match(input,40,FOLLOW_40_in_def159);  
            stream_40.add(char_literal8);



            // AST REWRITE
            // elements: source, sink, host
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 97:37: -> ^( NODE host source sink )
            {
                // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:97:40: ^( NODE host source sink )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(NODE, "NODE"), root_1);

                adaptor.addChild(root_1, stream_host.nextTree());
                adaptor.addChild(root_1, stream_source.nextTree());
                adaptor.addChild(root_1, stream_sink.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "def"

    public static class host_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "host"
    // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:99:1: host : ( Identifier | IPLiteral );
    public final FlumeDeployParser.host_return host() throws RecognitionException {
        FlumeDeployParser.host_return retval = new FlumeDeployParser.host_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token set9=null;

        Object set9_tree=null;

        try {
            // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:99:5: ( Identifier | IPLiteral )
            // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:
            {
            root_0 = (Object)adaptor.nil();

            set9=(Token)input.LT(1);
            if ( (input.LA(1)>=Identifier && input.LA(1)<=IPLiteral) ) {
                input.consume();
                adaptor.addChild(root_0, (Object)adaptor.create(set9));
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "host"

    public static class connection_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "connection"
    // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:103:1: connection : source '|' sink -> ^( NODE BLANK source sink ) ;
    public final FlumeDeployParser.connection_return connection() throws RecognitionException {
        FlumeDeployParser.connection_return retval = new FlumeDeployParser.connection_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal11=null;
        FlumeDeployParser.source_return source10 = null;

        FlumeDeployParser.sink_return sink12 = null;


        Object char_literal11_tree=null;
        RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
        RewriteRuleSubtreeStream stream_source=new RewriteRuleSubtreeStream(adaptor,"rule source");
        RewriteRuleSubtreeStream stream_sink=new RewriteRuleSubtreeStream(adaptor,"rule sink");
        try {
            // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:104:2: ( source '|' sink -> ^( NODE BLANK source sink ) )
            // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:104:5: source '|' sink
            {
            pushFollow(FOLLOW_source_in_connection195);
            source10=source();

            state._fsp--;

            stream_source.add(source10.getTree());
            char_literal11=(Token)match(input,39,FOLLOW_39_in_connection197);  
            stream_39.add(char_literal11);

            pushFollow(FOLLOW_sink_in_connection199);
            sink12=sink();

            state._fsp--;

            stream_sink.add(sink12.getTree());


            // AST REWRITE
            // elements: sink, source
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 104:21: -> ^( NODE BLANK source sink )
            {
                // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:104:24: ^( NODE BLANK source sink )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(NODE, "NODE"), root_1);

                adaptor.addChild(root_1, (Object)adaptor.create(BLANK, "BLANK"));
                adaptor.addChild(root_1, stream_source.nextTree());
                adaptor.addChild(root_1, stream_sink.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "connection"

    public static class source_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "source"
    // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:106:1: source : singleSource -> singleSource ;
    public final FlumeDeployParser.source_return source() throws RecognitionException {
        FlumeDeployParser.source_return retval = new FlumeDeployParser.source_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        FlumeDeployParser.singleSource_return singleSource13 = null;


        RewriteRuleSubtreeStream stream_singleSource=new RewriteRuleSubtreeStream(adaptor,"rule singleSource");
        try {
            // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:106:10: ( singleSource -> singleSource )
            // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:106:12: singleSource
            {
            pushFollow(FOLLOW_singleSource_in_source221);
            singleSource13=singleSource();

            state._fsp--;

            stream_singleSource.add(singleSource13.getTree());


            // AST REWRITE
            // elements: singleSource
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 106:26: -> singleSource
            {
                adaptor.addChild(root_0, stream_singleSource.nextTree());

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "source"

    public static class sourceEof_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sourceEof"
    // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:107:1: sourceEof : source EOF -> source ;
    public final FlumeDeployParser.sourceEof_return sourceEof() throws RecognitionException {
        FlumeDeployParser.sourceEof_return retval = new FlumeDeployParser.sourceEof_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF15=null;
        FlumeDeployParser.source_return source14 = null;


        Object EOF15_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_source=new RewriteRuleSubtreeStream(adaptor,"rule source");
        try {
            // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:107:11: ( source EOF -> source )
            // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:107:14: source EOF
            {
            pushFollow(FOLLOW_source_in_sourceEof235);
            source14=source();

            state._fsp--;

            stream_source.add(source14.getTree());
            EOF15=(Token)match(input,EOF,FOLLOW_EOF_in_sourceEof237);  
            stream_EOF.add(EOF15);



            // AST REWRITE
            // elements: source
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 107:27: -> source
            {
                adaptor.addChild(root_0, stream_source.nextTree());

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "sourceEof"

    public static class singleSource_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "singleSource"
    // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:108:1: singleSource : Identifier ( args )? -> ^( SOURCE Identifier ( args )? ) ;
    public final FlumeDeployParser.singleSource_return singleSource() throws RecognitionException {
        FlumeDeployParser.singleSource_return retval = new FlumeDeployParser.singleSource_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token Identifier16=null;
        FlumeDeployParser.args_return args17 = null;


        Object Identifier16_tree=null;
        RewriteRuleTokenStream stream_Identifier=new RewriteRuleTokenStream(adaptor,"token Identifier");
        RewriteRuleSubtreeStream stream_args=new RewriteRuleSubtreeStream(adaptor,"rule args");
        try {
            // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:108:14: ( Identifier ( args )? -> ^( SOURCE Identifier ( args )? ) )
            // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:108:16: Identifier ( args )?
            {
            Identifier16=(Token)match(input,Identifier,FOLLOW_Identifier_in_singleSource250);  
            stream_Identifier.add(Identifier16);

            // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:108:27: ( args )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==51) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:108:27: args
                    {
                    pushFollow(FOLLOW_args_in_singleSource252);
                    args17=args();

                    state._fsp--;

                    stream_args.add(args17.getTree());

                    }
                    break;

            }



            // AST REWRITE
            // elements: args, Identifier
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 108:33: -> ^( SOURCE Identifier ( args )? )
            {
                // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:108:36: ^( SOURCE Identifier ( args )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(SOURCE, "SOURCE"), root_1);

                adaptor.addChild(root_1, stream_Identifier.nextNode());
                // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:108:56: ( args )?
                if ( stream_args.hasNext() ) {
                    adaptor.addChild(root_1, stream_args.nextTree());

                }
                stream_args.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "singleSource"

    public static class multiSource_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "multiSource"
    // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:109:1: multiSource : singleSource ( ',' singleSource )* -> ( singleSource )+ ;
    public final FlumeDeployParser.multiSource_return multiSource() throws RecognitionException {
        FlumeDeployParser.multiSource_return retval = new FlumeDeployParser.multiSource_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal19=null;
        FlumeDeployParser.singleSource_return singleSource18 = null;

        FlumeDeployParser.singleSource_return singleSource20 = null;


        Object char_literal19_tree=null;
        RewriteRuleTokenStream stream_41=new RewriteRuleTokenStream(adaptor,"token 41");
        RewriteRuleSubtreeStream stream_singleSource=new RewriteRuleSubtreeStream(adaptor,"rule singleSource");
        try {
            // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:109:13: ( singleSource ( ',' singleSource )* -> ( singleSource )+ )
            // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:109:15: singleSource ( ',' singleSource )*
            {
            pushFollow(FOLLOW_singleSource_in_multiSource271);
            singleSource18=singleSource();

            state._fsp--;

            stream_singleSource.add(singleSource18.getTree());
            // /home/jon/flume/src/antlr/com/cloudera/flume/conf/FlumeDeploy.g:109:28: ( ',' singleSource )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==41) ) {
                    alt3=1;
                }

